# lead-followup-agent

./: .env.example  .gitignore  LICENSE  README.md  leads.example.json  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: lint.yml
